--- a/source/includes/steps-create-index.yaml
+++ b/source/includes/steps-create-index.yaml
@@ -38,21 +38,21 @@ content: |
      * - Build index in the background
 
        - If checked, ensure that the MongoDB deployment remains
-          available during the index build operation.
+         available during the index build operation.
 
        - :manual:`Background Construction </core/index-creation/index.html#background-construction>`
 
      * - Create unique index
 
        - If checked, ensure that the indexed fields do not
-          store duplicate values.
+         store duplicate values.
 
        - :manual:`Unique Indexes </core/index-unique>`
 
      * - Create :abbr:`TTL (Time to Live)`
 
        - If checked, automatically delete documents after a
-          specified number of seconds since the indexed field value.
+         specified number of seconds since the indexed field value.
 
        - :manual:`TTL Indexes </core/index-ttl>`
 
@@ -75,16 +75,16 @@ content: |
      * - Use custom collation
 
        - If checked, create a custom collation for the index
-          using the options provided in |compass-short|.
+         using the options provided in |compass-short|.
 
        - :manual:`Collation Document </reference/collation/#collation-document>`
 
-      * - Wildcard projection (*New in MongoDB 4.2*)
+     * - Wildcard projection (*New in MongoDB 4.2*)
         
-        - If checked, support unknown or arbitrary fields
-          which match the specified projection in the index.
+       - If checked, support unknown or arbitrary fields
+         which match the specified projection in the index.
 
-        - :manual-next:`Wildcard Indexes </core/index-wildcard/>`
+       - :manual:`Wildcard Indexes </core/index-wildcard/>`
 ---
 title: Click :guilabel:`Create` to create the index.
 level: 4
